--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "firebase": "^11.1.0",
     "lucide-react": "^0.456.0",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "react": "18",
     "react-day-picker": "8.10.1",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "18",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
